# crypto_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/core/: cache.py  security.py
backend/app/models/: __init__.py  coin.py  exchange.py  price_tick.py  user.py
backend/app/routers/: auth.py  coins.py  exchanges.py  mining.py  prices.py
backend/app/schemas/: coin.py  price.py  user.py
backend/app/services/: coingecko.py  price_sync.py
backend/tests/: conftest.py
backend/tests/routers/: test_coins.py
crawler/: Dockerfile  pyproject.toml
crawler/alembic/: env.py
crawler/app/: config.py  main.py  scheduler.py
crawler/app/models/: __init__.py  news_item.py
crawler/app/sources/: base.py  registry.py  rss.py  youtube.py
crawler/tests/: test_sources.py
frontend/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/explore-coins/: page.tsx
frontend/src/app/how-to-buy/: page.tsx
frontend/src/app/how-to-spend/: page.tsx
frontend/src/app/mining/: page.tsx
frontend/src/app/what-is-crypto/: page.tsx
frontend/src/components/: CoinTable.tsx  ExchangeComparison.tsx  GlossaryTooltip.tsx  LeafletMap.tsx  MerchantMap.tsx  MiningCalculator.tsx  Nav.tsx  PriceChart.tsx
frontend/src/lib/: api.ts  queryClient.ts
frontend/src/store/: useAppStore.ts
(+1 files in other folders)
